fixed bottom margin on mobile contact page

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -16,6 +16,10 @@
     @media only screen and (max-width: $bp-med) {
       @include flexCol;
     }
+
+    @media only screen and (max-width: $bp-sm) {
+      margin-bottom: 3rem;
+    }
   }
 }
 
